RESOLVED FIXED298960
ValidateQuerySurface64KHR forms a const pointer to an uninitialized value
https://bugs.webkit.org/show_bug.cgi?id=298960
Summary ValidateQuerySurface64KHR forms a const pointer to an uninitialized value
Cameron McCormack (:heycam)
Reported 2025-09-16 09:11:52 PDT
We don't use this function, and the passed in pointer is not actually used, but to make the compiler happy, let's initialize the variable.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-16 09:12:21 PDT
Cameron McCormack (:heycam)
Comment 2 2025-09-16 09:12:56 PDT
Cameron McCormack (:heycam)
Comment 3 2025-09-16 09:15:12 PDT
EWS
Comment 4 2025-09-16 10:55:55 PDT
Committed 300041@main (056f092b46e4): <https://commits.webkit.org/300041@main> Reviewed commits have been landed. Closing PR #50812 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.