Cherry-pick 300041@main (056f092b46e4). https://bugs.webkit.org/show_bug.cgi?id=298960

Initialize an uninitialized variable that we form a const pointer to but don't use
    https://bugs.webkit.org/show_bug.cgi?id=298960
    rdar://157721239

    Reviewed by Ryosuke Niwa.

    * Source/ThirdParty/ANGLE/src/libANGLE/validationEGL.cpp:
    (egl::ValidateQuerySurface64KHR):

    Canonical link: https://commits.webkit.org/300041@main

Canonical link: https://commits.webkit.org/290945.389@webkitglib/2.48